  the generated XPath expressions as XSLT location paths that
  previously worked in 2.3.1.

* Fixed parsing of some selectors in cssselect. Whitespace after combinators
  ">", "+" and "~" is now correctly ignored. Previously is was parsed as
  a descendant combinator. For example, "div> .foo" was parsed the same as
  "div>* .foo" instead of "div>.foo". Patch by Simon Sapin.

* lxml.html.diff no longer raises an exception when hitting
  'img' tags without 'src' attribute.

* Fixed parsing of more selectors in cssselect.  Whitespace before
  pseudo-elements and pseudo-classes is significant as it is a
  descendant combinator.
  "E :pseudo" should parse the same as "E \*:pseudo", not "E:pseudo".
  Patch by Simon Sapin.

Other changes
--------------


2.3.1 (2011-09-25)
==================

Features added
--------------

* New option ``kill_tags`` in ``lxml.html.clean`` to remove specific
  tags and their content (i.e. their whole subtree).

* ``pi.get()`` and ``pi.attrib`` on processing instructions to parse
  pseudo-attributes from the text content of processing instructions.

* ``lxml.get_include()`` returns a list of include paths that can be
  used to compile external C code against lxml.etree.  This is
  specifically required for statically linked lxml builds when code
  needs to compile against the exact same header file versions as lxml
  itself.

* ``Resolver.resolve_file()`` takes an additional option
  ``close_file`` that configures if the file(-like) object will be
  closed after reading or not.  By default, the file will be closed,
  as the user is not expected to keep a reference to it.

Bugs fixed
----------

* HTML cleaning didn't remove 'data:' links.

* The html5lib parser integration now uses the 'official'
  implementation in html5lib itself, which makes it work with newer
  releases of the library.

* In ``lxml.sax``, ``endElementNS()`` could incorrectly reject a plain
  tag name when the corresponding start event inferred the same plain